--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
   },
   "dependencies": {
-    "dayjs": "^1.11.7"
+    "@glidejs/glide": "^3.6.0",
+    "dayjs": "^1.11.7",
+    "swiper": "^8.4.5"
   }
 }
